public interface MainMenu {

    public void search();

    public void searchAllInCat();

    public void displayMyWatced();

    public void displayMySaved();
}
