public interface MediaFunctions
{
    public void play();
    public void stop();
    public void saveMovie();
    public void saveSeries();
    public void deleteFromSaved();



}
